# Lr_7

./: CMakeLists.txt  CMakePresets.json  Task_0.cpp
